--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pair-programming-extension",
+  "name": "extension",
   "displayName": "Pair Programming Extension",
   "description": "",
   "version": "0.0.1",
@@ -10,7 +10,7 @@
     "Other"
   ],
   "activationEvents": [],
-  "main": "./src/extension.js",
+  "main": "./extension/src/extension.js",
   "contributes": {
     "views": {
       "pair-programming-extension": [
@@ -26,27 +26,41 @@
         {
           "id": "pair-programming-extension",
           "title": "Pair Programming Session",
-          "icon": "./media/icon.png"
+          "icon": "./extension/src/media/icon.png"
         }
       ]
     }
   },
   "scripts": {
-    "lint": "eslint .",
-    "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack --mode production",
+    "watch": "webpack serve --mode development --config ./extension/webpack.config.js",
+    "package": "webpack --mode production --devtool hidden-source-map"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@types/vscode": "^1.82.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "@vscode/test-electron": "^2.3.4",
     "eslint": "^8.47.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.6"
+    "npm-run-all": "^4.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "code": "^5.2.4"
+    "@babel/preset-react": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "vscode": "^1.1.37"
   }
 }
