--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "compile": "webpack --mode production",
     "watch": "webpack serve --mode development --config ./extension/webpack.config.js",
-    "package": "webpack --mode production --devtool hidden-source-map"
+    "package": "webpack --mode production"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
