--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   "dependencies": {
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
-    "vscode": "^1.1.37"
+    "vscode": "^1.1.34",
+    "websocketserver": "^1.0.0",
+    "ws": "^8.14.2"
   }
 }
