--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-web-app/node_modules
+app/node_modules
 vscode-extension/node_modules
-web-app/package-lock.json
+app/package-lock.json
 vscode-extension/package-lock.json
 .DS_Store
