--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-app/node_modules
-vscode-extension/node_modules
-app/package-lock.json
-vscode-extension/package-lock.json
-.DS_Store
+**/package-lock.json
+.DS_*
+node_modules
+*.log
+*.gz
