Re-added extension folder to match design structure.

--- a/vscode-extension/.vscode/launch.json
+++ b/vscode-extension/.vscode/launch.json
@@ -7,7 +7,7 @@
 			],
 			"name": "Launch Extension",
 			"outFiles": [
-				"${workspaceFolder}/src/**/*.js"
+				"${workspaceFolder}/extension/src/**/*.js"
 			],
 			"request": "launch",
 			"type": "extensionHost",
