--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
-    "watch": "webpack serve --mode development --config ./webpack.config.js",
+    "watch": "webpack serve --mode development --config ./extension/webpack.config.js",
     "package": "webpack --mode production"
   },
   "devDependencies": {
