--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "isomorphic-ws": "^5.0.0",
     "peerjs": "^1.5.1",
     "react": "^18.2.0",
@@ -39,7 +41,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -63,6 +65,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "@jest/globals": "^29.7.0",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
