--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -59,12 +59,17 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.22.15",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.15",
+    "@mui/x-charts": "^6.0.0-alpha.16",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
     "isomorphic-ws": "^5.0.0",
     "process": "^0.11.10",
+    "react-google-charts": "^4.0.1",
     "react-use-websocket": "^3.0.0",
     "source-map-loader": "^4.0.1",
     "stream-browserify": "^3.0.0",
