--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
 			],
 			"name": "Launch Extension",
 			"outFiles": [
-				"${workspaceFolder}/extension/src/**/*.js"
+				"${workspaceFolder}/extension/vscode-extension/src/**/*.js"
 			],
 			"request": "launch",
 			"type": "extensionHost",
