--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,14 +1,11 @@
 FROM node:lts
-# Set working directory
 WORKDIR /
 
-# install node modules
-COPY ./package*.json .
+COPY ./package.json .
+# install the node modules
 RUN npm install
 
-# Copy all files from current directory to working dir in image
 COPY . .
 
-ENV PORT 80
 EXPOSE 80
 ENTRYPOINT [ "npm", "start"]
