--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
+    "start": "webpack serve --mode development --config ./extension/webpack.config.js",
     "watch": "webpack serve --mode development --config ./extension/webpack.config.js",
     "package": "webpack --mode production"
   },
@@ -53,7 +54,7 @@
     "react-dom": "^18.2.0",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
-    "webpack": "^5.88.2",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
