--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@deepgram/sdk": "^2.4.0",
-    "mongoose": "^7.6.3"
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.6.3",
+    "socket.io": "^4.7.2"
   }
 }
