--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -61,6 +61,7 @@
     "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
     "@mui/x-charts": "^6.0.0-alpha.16",
     "babel-loader": "^9.1.3",
