--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -3,6 +3,22 @@
   "displayName": "Pair Programming Extension",
   "description": "",
   "version": "0.0.1",
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    },
+    "testMatch": [
+      "<rootDir>/test/**/*.test.js"
+    ]
+  },
   "engines": {
     "vscode": "^1.82.0"
   },
@@ -34,6 +50,7 @@
   "scripts": {
     "vscode:prepublish": "npm run package",
     "watch": "webpack serve --mode development --config ./extension/webpack.config.js",
+    "test": "jest --coverage",
     "package": "webpack --mode production"
   },
   "devDependencies": {
