--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest --coverage",
+    "eject": "react-scripts eject"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,16 @@
   "dependencies": {
     "express": "^4.18.2",
     "peer": "^1.0.1",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "mongodb-memory-server": "^9.0.1",
+    "mongoose": "^7.6.4",
+    "path": "^0.12.7",
+    "pm2": "^5.3.0",
+    "ssh2-promise": "^1.0.3",
+    "supertest": "^6.3.3"
   }
 }
