--- a/vm/proxy/default.conf.template
+++ b/vm/proxy/default.conf.template
@@ -47,6 +47,20 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
     } # end location
+    location /server/ {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Accept-Encoding gzip;
+
+        proxy_pass http://api:3000/;
+        #rewrite ^/webrtc/(.*)$ /$1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+
+    } # end location
 
     listen 443 ssl;
     ssl_certificate fullchain.pem;
