--- a/vm/app/package.json
+++ b/vm/app/package.json
@@ -28,15 +28,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.1",
     "classnames": "^2.3.2",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "isomorphic-ws": "^5.0.0",
+    "jest": "^27.5.1",
     "peerjs": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -68,9 +70,7 @@
     "@babel/preset-react": "^7.22.15",
     "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "@jest/globals": "^29.7.0",
-    "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
     "react-test-renderer": "^18.2.0"
   }
 }
