--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "version": "0.0.1",
   "jest": {
-    "testEnvironment": "jsdom",
+    "testEnvironment": "jest-environment-jsdom",
     "moduleFileExtensions": [
       "js",
       "jsx"
@@ -16,7 +16,7 @@
       "\\.(css|scss)$": "identity-obj-proxy"
     },
     "testMatch": [
-      "<rootDir>/test/**/*.test.js"
+      "<rootDir>/extension/test/**/*.test.js"
     ]
   },
   "engines": {
@@ -55,6 +55,8 @@
     "package": "webpack --mode production"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/react": "^18.2.22",
@@ -63,12 +65,16 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "@vscode/test-electron": "^2.3.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.47.0",
     "glob": "^10.3.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.89.0",
@@ -76,12 +82,13 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
     "@mui/x-charts": "^6.0.0-alpha.16",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
