--- a/vm/proxy/default.conf.template
+++ b/vm/proxy/default.conf.template
@@ -1,6 +1,12 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+  listen 80;
+  listen [::]:80;
+  server_name _;
+  return 301 https://$host$request_uri;
+}
+
+server {
+
     server_name _;
 
     location / {
@@ -14,7 +20,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
-
     } # end location
 
     location /webrtc/ {
@@ -29,7 +34,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
-
     } # end location
     location /server/ {
         proxy_http_version 1.1;
@@ -38,12 +42,14 @@ server {
         proxy_set_header Accept-Encoding gzip;
 
         proxy_pass http://api:3000/;
-        #rewrite ^/webrtc/(.*)$ /$1 break;
+        #rewrite ^/api/(.*)$ /$1 break;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
-
     } # end location
 
+    listen 443 ssl;
+    ssl_certificate /etc/letsencrypt/live/sd-vm01.csc.ncsu.edu/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sd-vm01.csc.ncsu.edu/privkey.pem;
 }
