--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -68,6 +68,7 @@
     "babel-jest": "^29.7.0",
     "eslint": "^8.47.0",
     "glob": "^10.3.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mocha": "^10.2.0",
