note have to remove axios import from emotions/video call

--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -68,6 +68,7 @@
     "@babel/preset-react": "^7.22.15",
     "@cfaester/enzyme-adapter-react-18": "^0.7.1",
     "@jest/globals": "^29.7.0",
+    "axios": "^1.6.2",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
