--- a/vm/compose.yml
+++ b/vm/compose.yml
@@ -6,7 +6,7 @@ services:
       restart: unless-stopped
       volumes:
          - ./proxy/default.conf.template:/etc/nginx/templates/default.conf.template
-         - ./proxy/fullchain1.pem:/etc/nginx/templates/fullchain.pem
+         - ./proxy/fullchain1.pem:/etc/nginx/fullchain.pem
          - ./proxy/privkey1.pem.template:/etc/nginx/privkey.pem
       ports:
          - "80:80"
