--- a/vm/compose.yml
+++ b/vm/compose.yml
@@ -6,8 +6,8 @@ services:
       restart: unless-stopped
       volumes:
          - ./proxy/default.conf.template:/etc/nginx/templates/default.conf.template
-         - ./proxy/fullchain1.pem:/etc/nginx/fullchain.pem
-         - ./proxy/privkey1.pem:/etc/nginx/privkey.pem
+         - /etc/ssl/fullchain1.pem:/etc/nginx/fullchain.pem
+         - /etc/ssl/privkey1.pem:/etc/nginx/privkey.pem
       ports:
          - "80:80"
          - "443:443"
