--- a/vm/compose.yml
+++ b/vm/compose.yml
@@ -30,3 +30,8 @@ services:
          - ./app/src:/app/src
       environment:
          - PORT=80
+   db:
+      image: mongo:latest
+      restart: unless-stopped
+      env_file:
+         - .env
