--- a/vm/compose.yml
+++ b/vm/compose.yml
@@ -35,6 +35,8 @@ services:
       restart: unless-stopped
       volumes:
          - "./database/data:/data/db"
+         - "./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro"
+      command: [--auth]
       env_file:
          - .env
       ports:
