--- a/extension/package.json
+++ b/extension/package.json
@@ -80,9 +80,7 @@
     "typescript": "^5.1.6",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^4.15.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
@@ -90,10 +88,12 @@
     "@mui/x-charts": "^6.0.0-alpha.16",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
+    "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.0.1",
     "isomorphic-ws": "^5.0.0",
     "process": "^0.11.10",
     "react-google-charts": "^4.0.1",
