--- a/extension/package.json
+++ b/extension/package.json
@@ -57,30 +57,6 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "16.x",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@types/vscode": "^1.82.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "@vscode/test-electron": "^2.3.4",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.47.0",
-    "glob": "^10.3.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "mocha": "^10.2.0",
-    "npm-run-all": "^4.1.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-test-renderer": "^18.2.0",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
@@ -88,23 +64,51 @@
     "@mui/x-charts": "^6.0.0-alpha.16",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "16.x",
+    "@types/node-fetch": "^2.6.9",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@types/vscode": "^1.82.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "@vscode/test-electron": "^2.3.4",
     "axios": "^1.6.2",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.47.0",
+    "glob": "^10.3.3",
+    "identity-obj-proxy": "^3.0.0",
     "isomorphic-ws": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mocha": "^10.2.0",
+    "npm-run-all": "^4.1.5",
     "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
+    "react-test-renderer": "^18.2.0",
     "react-use-websocket": "^3.0.0",
     "source-map-loader": "^4.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
     "vscode": "^1.1.37",
     "watch": "^1.0.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
     "websocket": "^1.0.34",
     "websocketserver": "^1.0.0",
     "ws": "^8.14.2"
+  },
+  "dependencies": {
+    "axios": "^1.6.2"
   }
 }
