--- a/extension/package.json
+++ b/extension/package.json
@@ -95,6 +95,8 @@
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "isomorphic-ws": "^5.0.0",
     "process": "^0.11.10",
     "react-google-charts": "^4.0.1",
